# mcp-bazi-partner

./: README.md  SKILL.md  pyproject.toml
src/mcp_bazi_partner/: server.py
src/mcp_bazi_partner/data/: geju_probability_l2.json  partner_intros.json
src/mcp_bazi_partner/engine/: partner.py
