[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-bazi-partner"
version = "0.1.0"
description = "MCP server for Chinese BaZi (Four Pillars of Destiny) partner matching"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "lunar-python>=1.3.5",
]

[project.scripts]
mcp-bazi-partner = "mcp_bazi_partner.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bazi_partner"]
